LAB03/ex3/CompiledFiles/SampleParser.py
# Generated from Sample.g4 by ANTLR 4.9.2
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO




class SampleParser ( Parser ):

    grammarFileName = "Sample.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'if'", "'then'", "'the'", "'time'", "'is'", 
                     "'after'", "'before'", "'at'", "'play'", "'turn'", 
                     "'set'", "'to'", "'increase'", "'by'", "'decrease'", 
                     "'on'", "'off'", "'music'", "'song'", "'alarm'", "'video'", 
                     "'light'", "'fan'", "'lamp'", "'temperature'", "'brightness'", 
                     "'volume'", "':'", "'morning'", "'afternoon'", "'evening'", 
                     "'night'", "'in'", "'a'", "'an'" ]

    symbolicNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "WORD", "INT", "PUNCT", "WS" ]

    RULE_program = 0
    RULE_command = 1
    RULE_conditionalCommand = 2
    RULE_condition = 3
    RULE_comparator = 4
    RULE_playAction = 5
    RULE_turnAction = 6
    RULE_setAction = 7
    RULE_increaseAction = 8
    RULE_decreaseAction = 9
    RULE_turnModifier = 10
    RULE_playValidObject = 11
    RULE_turnOnValidObject = 12
    RULE_setValidObject = 13
    RULE_increaseValidObject = 14
    RULE_timeExpression = 15
    RULE_hourMinuteTime = 16
    RULE_specificTime = 17
    RULE_location = 18
    RULE_article = 19
    RULE_locationPhrase = 20

    ruleNames =  [ "program", "command", "conditionalCommand", "condition", 
                   "comparator", "playAction", "turnAction", "setAction", 
                   "increaseAction", "decreaseAction", "turnModifier", "playValidObject", 
                   "turnOnValidObject", "setValidObject", "increaseValidObject", 
                   "timeExpression", "hourMinuteTime", "specificTime", "location", 
                   "article", "locationPhrase" ]

    EOF = Token.EOF
    T__0=1
    T__1=2
    T__2=3
    T__3=4
    T__4=5
    T__5=6
    T__6=7
    T__7=8
    T__8=9
    T__9=10
    T__10=11
    T__11=12
    T__12=13
    T__13=14
    T__14=15
    T__15=16
    T__16=17
    T__17=18
    T__18=19
    T__19=20
    T__20=21
    T__21=22
    T__22=23
    T__23=24
    T__24=25
    T__25=26
    T__26=27
    T__27=28
    T__28=29
    T__29=30
    T__30=31
    T__31=32
    T__32=33
    T__33=34
    T__34=35
    WORD=36
    INT=37
    PUNCT=38
    WS=39

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.9.2")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class ProgramContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def EOF(self):
            return self.getToken(SampleParser.EOF, 0)

        def command(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(SampleParser.CommandContext)
            else:
                return self.getTypedRuleContext(SampleParser.CommandContext,i)


        def conditionalCommand(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(SampleParser.ConditionalCommandContext)
            else:
                return self.getTypedRuleContext(SampleParser.ConditionalCommandContext,i)


        def PUNCT(self):
            return self.getToken(SampleParser.PUNCT, 0)

        def getRuleIndex(self):
            return SampleParser.RULE_program




    def program(self):

        localctx = SampleParser.ProgramContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_program)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 44 
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 44
                self._errHandler.sync(self)
                token = self._input.LA(1)
                if token in [SampleParser.T__8, SampleParser.T__9, SampleParser.T__10, SampleParser.T__12, SampleParser.T__14]:
                    self.state = 42
                    self.command()
                    pass
                elif token in [SampleParser.T__0]:
                    self.state = 43
                    self.conditionalCommand()
                    pass
                else:
                    raise NoViableAltException(self)

                self.state = 46 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if not ((((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << SampleParser.T__0) | (1 << SampleParser.T__8) | (1 << SampleParser.T__9) | (1 << SampleParser.T__10) | (1 << SampleParser.T__12) | (1 << SampleParser.T__14))) != 0)):
                    break

            self.state = 49
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==SampleParser.PUNCT:
                self.state = 48
                self.match(SampleParser.PUNCT)


            self.state = 51
            self.match(SampleParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class CommandContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def playAction(self):
            return self.getTypedRuleContext(SampleParser.PlayActionContext,0)


        def turnAction(self):
            return self.getTypedRuleContext(SampleParser.TurnActionContext,0)


        def setAction(self):
            return self.getTypedRuleContext(SampleParser.SetActionContext,0)


        def increaseAction(self):
            return self.getTypedRuleContext(SampleParser.IncreaseActionContext,0)


        def decreaseAction(self):
            return self.getTypedRuleContext(SampleParser.DecreaseActionContext,0)


        def getRuleIndex(self):
            return SampleParser.RULE_command




    def command(self):

        localctx = SampleParser.CommandContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_command)
        try:
            self.state = 58
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [SampleParser.T__8]:
                self.enterOuterAlt(localctx, 1)
                self.state = 53
                self.playAction()
                pass
            elif token in [SampleParser.T__9]:
                self.enterOuterAlt(localctx, 2)
                self.state = 54
                self.turnAction()
                pass
            elif token in [SampleParser.T__10]:
                self.enterOuterAlt(localctx, 3)
                self.state = 55
                self.setAction()
                pass
            elif token in [SampleParser.T__12]:
                self.enterOuterAlt(localctx, 4)
                self.state = 56
                self.increaseAction()
                pass
            elif token in [SampleParser.T__14]:
                self.enterOuterAlt(localctx, 5)
                self.state = 57
                self.decreaseAction()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ConditionalCommandContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def condition(self):
            return self.getTypedRuleContext(SampleParser.ConditionContext,0)


        def command(self):
            return self.getTypedRuleContext(SampleParser.CommandContext,0)


        def getRuleIndex(self):
            return SampleParser.RULE_conditionalCommand




    def conditionalCommand(self):

        localctx = SampleParser.ConditionalCommandContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_conditionalCommand)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 60
            self.match(SampleParser.T__0)
            self.state = 61
            self.condition()
            self.state = 62
            self.match(SampleParser.T__1)
            self.state = 63
            self.command()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ConditionContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def comparator(self):
            return self.getTypedRuleContext(SampleParser.ComparatorContext,0)


        def timeExpression(self):
            return self.getTypedRuleContext(SampleParser.TimeExpressionContext,0)


        def getRuleIndex(self):
            return SampleParser.RULE_condition




    def condition(self):

        localctx = SampleParser.ConditionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_condition)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 65
            self.match(SampleParser.T__2)
            self.state = 66
            self.match(SampleParser.T__3)
            self.state = 67
            self.match(SampleParser.T__4)
            self.state = 68
            self.comparator()
            self.state = 69
            self.timeExpression()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ComparatorContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return SampleParser.RULE_comparator




    def comparator(self):

        localctx = SampleParser.ComparatorContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_comparator)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 71
            _la = self._input.LA(1)
            if not((((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << SampleParser.T__5) | (1 << SampleParser.T__6) | (1 << SampleParser.T__7))) != 0)):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class PlayActionContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def playValidObject(self):
            return self.getTypedRuleContext(SampleParser.PlayValidObjectContext,0)


        def location(self):
            return self.getTypedRuleContext(SampleParser.LocationContext,0)


        def getRuleIndex(self):
            return SampleParser.RULE_playAction




    def playAction(self):

        localctx = SampleParser.PlayActionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_playAction)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 73
            self.match(SampleParser.T__8)
            self.state = 74
            self.playValidObject()
            self.state = 76
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==SampleParser.T__32:
                self.state = 75
                self.location()


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class TurnActionContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def turnModifier(self):
            return self.getTypedRuleContext(SampleParser.TurnModifierContext,0)


        def turnOnValidObject(self):
            return self.getTypedRuleContext(SampleParser.TurnOnValidObjectContext,0)


        def article(self):
            return self.getTypedRuleContext(SampleParser.ArticleContext,0)


        def getRuleIndex(self):
            return SampleParser.RULE_turnAction




    def turnAction(self):

        localctx = SampleParser.TurnActionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_turnAction)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 78
            self.match(SampleParser.T__9)
            self.state = 79
            self.turnModifier()
            self.state = 81
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if (((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << SampleParser.T__2) | (1 << SampleParser.T__33) | (1 << SampleParser.T__34))) != 0):
                self.state = 80
                self.article()


            self.state = 83
            self.turnOnValidObject()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class SetActionContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def setValidObject(self):
            return self.getTypedRuleContext(SampleParser.SetValidObjectContext,0)


        def INT(self):
            return self.getToken(SampleParser.INT, 0)

        def getRuleIndex(self):
            return SampleParser.RULE_setAction




    def setAction(self):

        localctx = SampleParser.SetActionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_setAction)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 85
            self.match(SampleParser.T__10)
            self.state = 86
            self.setValidObject()
            self.state = 87
            self.match(SampleParser.T__11)
            self.state = 88
            self.match(SampleParser.INT)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class IncreaseActionContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def increaseValidObject(self):
            return self.getTypedRuleContext(SampleParser.IncreaseValidObjectContext,0)


        def INT(self):
            return self.getToken(SampleParser.INT, 0)

        def getRuleIndex(self):
            return SampleParser.RULE_increaseAction




    def increaseAction(self):

        localctx = SampleParser.IncreaseActionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_increaseAction)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 90
            self.match(SampleParser.T__12)
            self.state = 91
            self.increaseValidObject()
            self.state = 92
            self.match(SampleParser.T__13)
            self.state = 93
            self.match(SampleParser.INT)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class DecreaseActionContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def increaseValidObject(self):
            return self.getTypedRuleContext(SampleParser.IncreaseValidObjectContext,0)


        def INT(self):
            return self.getToken(SampleParser.INT, 0)

        def getRuleIndex(self):
            return SampleParser.RULE_decreaseAction




    def decreaseAction(self):

        localctx = SampleParser.DecreaseActionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_decreaseAction)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 95
            self.match(SampleParser.T__14)
            self.state = 96
            self.increaseValidObject()
            self.state = 97
            self.match(SampleParser.T__13)
            self.state = 98
            self.match(SampleParser.INT)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class TurnModifierContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return SampleParser.RULE_turnModifier




    def turnModifier(self):

        localctx = SampleParser.TurnModifierContext(self, self._ctx, self.state)
        self.enterRule(localctx, 20, self.RULE_turnModifier)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 100
            _la = self._input.LA(1)
            if not(_la==SampleParser.T__15 or _la==SampleParser.T__16):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class PlayValidObjectContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return SampleParser.RULE_playValidObject




    def playValidObject(self):

        localctx = SampleParser.PlayValidObjectContext(self, self._ctx, self.state)
        self.enterRule(localctx, 22, self.RULE_playValidObject)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 102
            _la = self._input.LA(1)
            if not((((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << SampleParser.T__17) | (1 << SampleParser.T__18) | (1 << SampleParser.T__19) | (1 << SampleParser.T__20))) != 0)):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class TurnOnValidObjectContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def locationPhrase(self):
            return self.getTypedRuleContext(SampleParser.LocationPhraseContext,0)


        def getRuleIndex(self):
            return SampleParser.RULE_turnOnValidObject




    def turnOnValidObject(self):

        localctx = SampleParser.TurnOnValidObjectContext(self, self._ctx, self.state)
        self.enterRule(localctx, 24, self.RULE_turnOnValidObject)
        try:
            self.state = 112
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,6,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 104
                self.match(SampleParser.T__21)
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 105
                self.match(SampleParser.T__22)
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 106
                self.locationPhrase()
                self.state = 107
                self.match(SampleParser.T__21)
                pass

            elif la_ == 4:
                self.enterOuterAlt(localctx, 4)
                self.state = 109
                self.locationPhrase()
                self.state = 110
                self.match(SampleParser.T__23)
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class SetValidObjectContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return SampleParser.RULE_setValidObject




    def setValidObject(self):

        localctx = SampleParser.SetValidObjectContext(self, self._ctx, self.state)
        self.enterRule(localctx, 26, self.RULE_setValidObject)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 114
            self.match(SampleParser.T__24)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class IncreaseValidObjectContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return SampleParser.RULE_increaseValidObject




    def increaseValidObject(self):

        localctx = SampleParser.IncreaseValidObjectContext(self, self._ctx, self.state)
        self.enterRule(localctx, 28, self.RULE_increaseValidObject)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 116
            _la = self._input.LA(1)
            if not((((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << SampleParser.T__24) | (1 << SampleParser.T__25) | (1 << SampleParser.T__26))) != 0)):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class TimeExpressionContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def hourMinuteTime(self):
            return self.getTypedRuleContext(SampleParser.HourMinuteTimeContext,0)


        def specificTime(self):
            return self.getTypedRuleContext(SampleParser.SpecificTimeContext,0)


        def getRuleIndex(self):
            return SampleParser.RULE_timeExpression




    def timeExpression(self):

        localctx = SampleParser.TimeExpressionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 30, self.RULE_timeExpression)
        try:
            self.state = 120
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [SampleParser.INT]:
                self.enterOuterAlt(localctx, 1)
                self.state = 118
                self.hourMinuteTime()
                pass
            elif token in [SampleParser.T__28, SampleParser.T__29, SampleParser.T__30, SampleParser.T__31]:
                self.enterOuterAlt(localctx, 2)
                self.state = 119
                self.specificTime()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class HourMinuteTimeContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def INT(self, i:int=None):
            if i is None:
                return self.getTokens(SampleParser.INT)
            else:
                return self.getToken(SampleParser.INT, i)

        def getRuleIndex(self):
            return SampleParser.RULE_hourMinuteTime




    def hourMinuteTime(self):

        localctx = SampleParser.HourMinuteTimeContext(self, self._ctx, self.state)
        self.enterRule(localctx, 32, self.RULE_hourMinuteTime)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 122
            self.match(SampleParser.INT)
            self.state = 123
            self.match(SampleParser.T__27)
            self.state = 124
            self.match(SampleParser.INT)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class SpecificTimeContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return SampleParser.RULE_specificTime




    def specificTime(self):

        localctx = SampleParser.SpecificTimeContext(self, self._ctx, self.state)
        self.enterRule(localctx, 34, self.RULE_specificTime)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 126
            _la = self._input.LA(1)
            if not((((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << SampleParser.T__28) | (1 << SampleParser.T__29) | (1 << SampleParser.T__30) | (1 << SampleParser.T__31))) != 0)):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class LocationContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def locationPhrase(self):
            return self.getTypedRuleContext(SampleParser.LocationPhraseContext,0)


        def article(self):
            return self.getTypedRuleContext(SampleParser.ArticleContext,0)


        def getRuleIndex(self):
            return SampleParser.RULE_location




    def location(self):

        localctx = SampleParser.LocationContext(self, self._ctx, self.state)
        self.enterRule(localctx, 36, self.RULE_location)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 128
            self.match(SampleParser.T__32)
            self.state = 130
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if (((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << SampleParser.T__2) | (1 << SampleParser.T__33) | (1 << SampleParser.T__34))) != 0):
                self.state = 129
                self.article()


            self.state = 132
            self.locationPhrase()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ArticleContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return SampleParser.RULE_article




    def article(self):

        localctx = SampleParser.ArticleContext(self, self._ctx, self.state)
        self.enterRule(localctx, 38, self.RULE_article)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 134
            _la = self._input.LA(1)
            if not((((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << SampleParser.T__2) | (1 << SampleParser.T__33) | (1 << SampleParser.T__34))) != 0)):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class LocationPhraseContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def WORD(self, i:int=None):
            if i is None:
                return self.getTokens(SampleParser.WORD)
            else:
                return self.getToken(SampleParser.WORD, i)

        def getRuleIndex(self):
            return SampleParser.RULE_locationPhrase




    def locationPhrase(self):

        localctx = SampleParser.LocationPhraseContext(self, self._ctx, self.state)
        self.enterRule(localctx, 40, self.RULE_locationPhrase)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 136
            self.match(SampleParser.WORD)
            self.state = 140
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==SampleParser.WORD:
                self.state = 137
                self.match(SampleParser.WORD)
                self.state = 142
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx





